--- a/emmabeauty/style/style.scss
+++ b/emmabeauty/style/style.scss
@@ -11,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 676px;
+    height: 608px;
     width: 100%;
 }
 .boton-ingreso {
@@ -19,4 +19,11 @@
 }
 .logo {
     width: 33px;
+    margin-left: -28px;
+}
+.texto-banner{
+    color: initial;
+}
+.tarjeta-index{
+    display: flex;
 }
