--- a/emmabeauty/style/style.scss
+++ b/emmabeauty/style/style.scss
@@ -24,6 +24,6 @@
 .texto-banner{
     color: initial;
 }
-.tarjeta-index{
-    display: flex;
+.card-body{
+    background-color: tan !important ;
 }
