--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -1,7 +1,49 @@
 .contenedor-tarjetas {
   display: grid;
   grid-template-columns: 4fr 4fr 4fr 4fr;
-  grid-template-rows: 380px 380px 380px 380px;
+  grid-template-rows: 380px 380px;
+}
+
+.card {
+  width: 18rem;
+  border: 1px solid #ce96d0;
+  border-radius: 5px;
+  padding: 10px;
+  margin-bottom: 20px;
+  margin-bottom: -177px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  font-family: Arial, sans-serif;
+  background-color: tan;
+}
+
+.card img {
+  width: 100%;
+  height: 203px;
+  border-radius: 5px;
+}
+
+.info-hora {
+  font-size: 18px;
+  font-family: initial;
+}
+
+.info-precio {
+  font-size: 18px;
+  font-family: initial;
+}
+
+.card-text {
+  font-family: emoji;
+}
+
+.card-title {
+  font-family: cursive;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: rgba(159, 127, 185, 0.7607843137);
+  border-color: #773477;
 }
 
 .color-fondo {
