--- a/emmabeauty/style/_manicuria.scss
+++ b/emmabeauty/style/_manicuria.scss
@@ -1,7 +1,8 @@
 .contenedor-tarjetas {
     display: grid;
-    grid-template-columns: 4fr 4fr 4fr 4fr;
-    grid-template-rows: 380px 380px;
+    grid-template-columns: 4fr 4fr 4fr 4fr !important;
+    grid-template-rows: 380px 380px 380px;
+    padding-left: 60px;
 }
 .card {
     width: 18rem;
