--- a/emmabeauty/style/_pestañas.scss
+++ b/emmabeauty/style/_pestañas.scss
@@ -1,6 +1,6 @@
 .contenedor-tarjetas {
     display: grid;
-    grid-template-columns: 4fr 4fr 4fr 4fr;
+    grid-template-columns: 4fr 4fr 4fr ;
     grid-template-rows: 380px 380px;
     padding-left: 60px;
 }
