--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -1,7 +1,8 @@
 .contenedor-tarjetas {
   display: grid;
-  grid-template-columns: 4fr 4fr 4fr 4fr;
-  grid-template-rows: 380px 380px;
+  grid-template-columns: 4fr 4fr 4fr 4fr !important;
+  grid-template-rows: 380px 380px 380px;
+  padding-left: 60px;
 }
 
 .card {
@@ -44,6 +45,13 @@
   color: #fff;
   background-color: rgba(159, 127, 185, 0.7607843137);
   border-color: #773477;
+}
+
+.contenedor-tarjetas {
+  display: grid;
+  grid-template-columns: 4fr 4fr 4fr;
+  grid-template-rows: 380px 380px;
+  padding-left: 60px;
 }
 
 .color-fondo {
@@ -132,4 +140,41 @@
 
 #closeSesion {
   display: none;
+}
+
+.floating-button {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 9999;
+  background-color: #a600ff;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 9999;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.modal-content {
+  background-color: beige;
+  margin: 20% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+  max-width: 400px;
 }/*# sourceMappingURL=style.css.map */
