--- a/emmabeauty/style/style.scss
+++ b/emmabeauty/style/style.scss
@@ -124,4 +124,28 @@
     border: 1px solid #888;
     width: 80%;
     max-width: 400px;
+    max-width: 600px;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+
+body.modal-open {
+    overflow: hidden;
+}
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #a600ff;
+}
+
+.boton-finalizar {
+    background-color: darkorchid;
+}
+
+.nav-link {
+    color: black;
+}
+
+.nav-link:hover {
+    color: blueviolet;
 }
