--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -193,6 +193,7 @@ body.modal-open {
 
 .boton-finalizar {
   background-color: darkorchid;
+  margin: 14px;
 }
 
 .nav-link {
@@ -201,4 +202,72 @@ body.modal-open {
 
 .nav-link:hover {
   color: blueviolet;
+}
+
+.card-container {
+  display: flex;
+  flex-direction: column;
+}
+
+.card-small {
+  display: flex;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.card-small-content {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.card-small-image {
+  margin-right: 10px;
+}
+
+.card-small-image img {
+  width: 50px;
+  height: 50px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.card-small-text {
+  flex-grow: 1;
+}
+
+.card-small-title,
+.card-small-info {
+  margin: 0;
+  font-size: 12px;
+}
+
+.divider {
+  width: 100%;
+  height: 1px;
+  background-color: blueviolet;
+  margin-bottom: 10px;
+}
+
+.modal-buttons {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 10px;
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  margin-top: 10px;
+  margin-left: auto;
+}
+
+.icons span {
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.icons span:last-child {
+  margin-left: 0;
 }/*# sourceMappingURL=style.css.map */
