--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -217,7 +217,6 @@ body.modal-open {
 
 .card-small-content {
   display: flex;
-  align-items: center;
   width: 100%;
 }
 
@@ -242,13 +241,6 @@ body.modal-open {
   font-size: 12px;
 }
 
-.divider {
-  width: 100%;
-  height: 1px;
-  background-color: blueviolet;
-  margin-bottom: 10px;
-}
-
 .modal-buttons {
   display: flex;
   align-items: center;
@@ -266,8 +258,65 @@ body.modal-open {
 .icons span {
   margin-left: 10px;
   font-size: 20px;
+  margin-right: 54px;
 }
 
 .icons span:last-child {
   margin-left: 0;
+}
+
+.boton-fin {
+  margin-right: 14px !important;
+}
+
+.card-small-delete {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 5px;
+}
+
+.mini-button {
+  width: 20px;
+  height: 20px;
+  padding: 0;
+  border: none;
+  background: transparent;
+}
+
+.mini-button img {
+  width: 100%;
+  height: 100%;
+}
+
+.card-container .card-small {
+  margin-bottom: 10px;
+}
+
+.card-container .card-small:last-child {
+  margin-bottom: 0;
+}
+
+.card-container .card-small-content {
+  border-bottom: 2px solid blueviolet;
+}
+
+.card-small-delete {
+  display: flex;
+  align-items: center;
+  margin-top: 0px;
+}
+
+.delete-button {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
+}
+
+.delete-button img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }/*# sourceMappingURL=style.css.map */
