terminaciones para entregar

--- a/emmabeauty/style/style.scss
+++ b/emmabeauty/style/style.scss
@@ -1,5 +1,6 @@
 @import "manicuria";
 @import "pestañas";
+@import "cejas";
 
 .color-fondo {
     background-color: rosybrown;
@@ -271,4 +272,3 @@ body.modal-open {
     height: 100%;
     object-fit: contain;
 }
-
