--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -54,6 +54,13 @@
   padding-left: 60px;
 }
 
+.contenedor-tarjetas {
+  display: grid;
+  grid-template-columns: 4fr 4fr 4fr 4fr;
+  grid-template-rows: 380px 380px;
+  padding-left: 60px;
+}
+
 .color-fondo {
   background-color: rosybrown;
   margin: 0px;
@@ -224,7 +231,7 @@ body.modal-open {
   width: 50px;
   height: 50px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .card-small-text {
@@ -320,5 +327,7 @@ body.modal-open {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-     object-fit: contain;
-}/*# sourceMappingURL=style.css.map */
+  object-fit: contain;
+}
+
+/*# sourceMappingURL=style.css.map */
