--- a/emmabeauty/style/style.css
+++ b/emmabeauty/style/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .contenedor-tarjetas {
   display: grid;
   grid-template-columns: 4fr 4fr 4fr 4fr !important;
@@ -18,8 +19,8 @@
 }
 
 .card img {
-  width: 100%;
-  height: 203px;
+  width: 226px;
+  height: 226px;
   border-radius: 5px;
 }
 
@@ -128,6 +129,10 @@
   pointer-events: auto;
 }
 
+.close-button {
+  cursor: default;
+}
+
 .modal-open {
   overflow: hidden;
 }
@@ -185,6 +190,48 @@
   max-width: 449px;
 }
 
+.carousel {
+  display: flex;
+  justify-content: center;
+  margin-top: 25px;
+  width: 70%;
+}
+
+.carousel-inner {
+  width: 82%;
+  background: wheat;
+  border-radius: 12px;
+}
+
+.carousel-caption {
+  color: black;
+  left: 35% !important;
+  top: 12px;
+  padding-top: 0px !important;
+  left: 18% !important;
+}
+
+.carousel-control {
+  width: 30px !important;
+  height: 30px !important;
+}
+
+.nombre-reseña {
+  font-weight: 500;
+}
+
+.perfil-foto {
+  width: 15%;
+}
+
+.fecha-reseña {
+  display: flex;
+  justify-content: end;
+  font-size: 12px;
+  color: grey;
+  margin-top: 13px;
+}
+
 body.modal-open {
   overflow: hidden;
 }
@@ -231,7 +278,7 @@ body.modal-open {
   width: 50px;
   height: 50px;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 .card-small-text {
@@ -327,7 +374,5 @@ body.modal-open {
   width: 100%;
   height: 100%;
   -o-object-fit: contain;
-  object-fit: contain;
-}
-
-/*# sourceMappingURL=style.css.map */
+     object-fit: contain;
+}/*# sourceMappingURL=style.css.map */
